[package]
name = "gtkrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = {version="0.6.0", features=["libadwaita", "gnome_44", "macros"]}
relm4-components = "0.6.0"
relm4-macros = "0.6.0"
relm4-icons = {version="0.6.0", features=["plus","minus","up","down","top","rich-text","edit","share"]}
tracker = "0.2.1"
rand = "0.8.5"